--- a/cluster/olo-instance.yaml
+++ b/cluster/olo-instance.yaml
@@ -17,7 +17,7 @@ spec:
     elasticsearch:
       nodeCount: 3 
       storage:
-        storageClassName: "thin-csi" 
+        storageClassName: "thin" 
         size: 200G
       resources: 
         limits:
