--- a/cluster/infraMachineSet.yaml
+++ b/cluster/infraMachineSet.yaml
@@ -40,7 +40,7 @@ spec:
             creationTimestamp: null
           network:
             devices:
-            - networkName: ocp
+            - networkName: LNX
           numCPUs: 4
           numCoresPerSocket: 1
           snapshot: ""
