--- a/cluster/infra/migrate-router.yaml
+++ b/cluster/infra/migrate-router.yaml
@@ -22,3 +22,7 @@ spec:
     nodeSelector:
       matchLabels: 
         node-role.kubernetes.io/infra: ""
+  tolerations:
+  - effect: NoSchedule 
+    key: node-role.kubernetes.io/infra 
+    operator: Exists 
