--- a/cluster/infra/migrate-router.yaml
+++ b/cluster/infra/migrate-router.yaml
@@ -18,7 +18,7 @@ spec:
   replicas: 2
   tuningOptions: {}
   unsupportedConfigOverrides: null
-  nodePlacement:
-    nodeSelector:
-      matchLabels: 
-        node-role.kubernetes.io/infra: ""
+#  nodePlacement:
+#    nodeSelector:
+#      matchLabels: 
+#        node-role.kubernetes.io/infra: ""
