--- a/cluster/infra/infraMachineSet.yaml
+++ b/cluster/infra/infraMachineSet.yaml
@@ -25,9 +25,9 @@ spec:
         creationTimestamp: null
         labels:
           node-role.kubernetes.io/infra: ""
-      taints: 
-        - key: node-role.kubernetes.io/infra
-          effect: NoSchedule
+#      taints: 
+#        - key: node-role.kubernetes.io/infra
+#          effect: NoSchedule
       providerSpec:
         value:
           apiVersion: vsphereprovider.openshift.io/v1beta1
