--- a/cluster/zabbix-operator.yaml
+++ b/cluster/zabbix-operator.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: zabbix-operator-certified
-  namespace: openshift-operators 
+  namespace: zabbix
 spec:
   channel: lts
   name: zabbix-operator-certified
