--- a/cluster/zabbix-secrets.yaml
+++ b/cluster/zabbix-secrets.yaml
@@ -2,6 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: zabbix-mysql-secrets
+  namespace: zabbix
 data:
   mysql_root_password: V2VsY29tZTEh
   mysql_zabbix_password: emFiYml4X3N1cGVyIQ==
