--- a/aap/aap-instance.yaml
+++ b/aap/aap-instance.yaml
@@ -1,20 +1,20 @@
 apiVersion: automationcontroller.ansible.com/v1beta1
 kind: AutomationController
 metadata:
-  name: randalllabs
+  name: aap
   namespace: openshift-operators
 spec:
   create_preload_data: true
   route_tls_termination_mechanism: Edge
-  garbage_collect_secrets: false
+  garbage_collect_secrets: true
   ingress_type: Route
   loadbalancer_port: 80
   image_pull_policy: IfNotPresent
   projects_storage_size: 8Gi
   task_privileged: false
   projects_storage_access_mode: ReadWriteMany
-  projects_persistence: false
-  replicas: 1
+  projects_persistence: true
+  replicas: 3
   admin_user: admin
   loadbalancer_protocol: http
   nodeport_port: 30080
