--- a/cluster/aap/aap-instance.yaml
+++ b/cluster/aap/aap-instance.yaml
@@ -11,6 +11,8 @@ spec:
   loadbalancer_port: 80
   image_pull_policy: IfNotPresent
   projects_storage_size: 8Gi
+  projects_storage_class: localblock-sc
+  postgres_storage_class: localblock-sc
   task_privileged: false
   projects_storage_access_mode: ReadWriteMany
   projects_persistence: false
