--- a/cluster/worker-machineset.yaml
+++ b/cluster/worker-machineset.yaml
@@ -4,23 +4,23 @@ metadata:
   annotations:
   creationTimestamp: null
   labels:
-    machine.openshift.io/cluster-api-cluster: vmware-lnzv5
-  name: vmware-lnzv5-worker
+    machine.openshift.io/cluster-api-cluster: vmware-gzzwl
+  name: vmware-gzzwl-worker
   namespace: openshift-machine-api
 spec:
   deletePolicy: Oldest
   replicas: 2
   selector:
     matchLabels:
-      machine.openshift.io/cluster-api-cluster: vmware-lnzv5
-      machine.openshift.io/cluster-api-machineset: vmware-lnzv5-worker
+      machine.openshift.io/cluster-api-cluster: vmware-gzzwl
+      machine.openshift.io/cluster-api-machineset: vmware-gzzwl-worker
   template:
     metadata:
       labels:
-        machine.openshift.io/cluster-api-cluster: vmware-lnzv5
+        machine.openshift.io/cluster-api-cluster: vmware-gzzwl
         machine.openshift.io/cluster-api-machine-role: worker
         machine.openshift.io/cluster-api-machine-type: worker
-        machine.openshift.io/cluster-api-machineset: vmware-lnzv5-worker
+        machine.openshift.io/cluster-api-machineset: vmware-gzzwl-worker
     spec:
       metadata:
         creationTimestamp: null
@@ -42,12 +42,12 @@ spec:
           numCPUs: 4
           numCoresPerSocket: 4
           snapshot: ""
-          template: vmware-lnzv5-rhcos
+          template: vmware-gzzwl-rhcos
           userDataSecret:
             name: worker-user-data
           workspace:
             datacenter: BasementRack
             datastore: QNAP-ISCSI-THIN
-            folder: /BasementRack/vm/vmware-lnzv5
+            folder: /Basement/vm/vmware-gzzwl
             resourcePool: /BasementRack/host/DL360G9/Resources
             server: vcenter.randalllabs.com
