--- a/cluster-app.yml
+++ b/cluster-app.yml
@@ -1,3 +1,16 @@
+---
+apiVersion: operators.coreos.com/v1alpha1
+kind: Subscription
+metadata:
+  name: openshift-gitops-operator
+  namespace: openshift-operators
+spec:
+  channel: stable 
+  installPlanApproval: Automatic
+  name: openshift-gitops-operator 
+  source: redhat-operators 
+  sourceNamespace: openshift-marketplace 
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
