--- a/operators/tang/tang-operator.yaml
+++ b/operators/tang/tang-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: tang_subscription
+  name: tang-subscription
   namespace: openshift-operators 
 spec:
   channel: 0.0.24 
