--- a/operators/aap/subscription.yaml
+++ b/operators/aap/subscription.yaml
@@ -8,3 +8,4 @@ spec:
   name: ansible-automation-platform-operator
   source: redhat-operators 
   sourceNamespace: openshift-marketplace 
+  installPlanApproval: Automatic
