--- a/operators/tang/subscription.yaml
+++ b/operators/tang/subscription.yaml
@@ -8,3 +8,4 @@ spec:
   name: tang-operator
   source: redhat-operators 
   sourceNamespace: openshift-marketplace 
+  installPlanApproval: Automatic
