--- a/operators/gitlab-runner/subscription.yaml
+++ b/operators/gitlab-runner/subscription.yaml
@@ -1,11 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: compliance-operator
+  name: gitlab-runner-operator
   namespace: openshift-operators 
 spec:
-  channel: release-0.1
-  name: compliance-operator
-  source: redhat-operators 
+  channel: stable
+  name: gitlab-runner-operator
+  source: certified-operators 
   sourceNamespace: openshift-marketplace 
   installPlanApproval: Automatic
