--- a/cluster/operators-app.yml
+++ b/cluster/operators-app.yml
@@ -13,6 +13,6 @@ spec:
       recurse: true
     path: operators
     repoURL: https://github.com/racinrandall/gitops-test
-    targetRevision: baremetal
+    targetRevision: 4-12
   syncPolicy:
     automated: {}
