--- a/operators/aap/aap-instance.yaml
+++ b/operators/aap/aap-instance.yaml
@@ -11,7 +11,7 @@ spec:
   loadbalancer_port: 80
   image_pull_policy: IfNotPresent
   projects_storage_size: 8Gi
-  storageClassName: ocs-storagecluster-ceph-rbd
+  storageClassName: thin
   task_privileged: false
   projects_storage_access_mode: ReadWriteMany
   projects_persistence: false
